@startuml
'https://plantuml.com/class-diagram

enum REPORT_TYPE {
    RECIPE_USED
    INGREDIENT_USED
    TIMES_INGREDIENT_REACHED_LOW
    RECIPES_CREATED
    INGREDIENTS_CREATED
}

class Ingredient {
    - ingredientID: String
    - productName: String
    - quantityDetails: IngredientStorage
    - unitDetails: IngredientUnit
    - dateAdded: Date
    - dateUpdated: Date

    + getIngredientID(): String
    + getProductName(): String
    + setProductName(name: String): void
    + getQuantityDetails(): IngredientStorageRequirement
    + setQuantityDetails(IngredientStorageRequirement): void
    + getUnitDetails(): IngredientUnit
    + setUnitDetails(ingredientDetails: IngredientUnit): void
    + getDateAdded(): Date
    + getDateUpdated(): Date
    + setDateUpdated(date: Date): void
}

class IngredientUnit {
    - pricePerUnit: double
    - unitOfMeasurement: String

    + getPricePerUnit(): double
    + setPricePerUnit(price: double): void
    + getUnitOfMeasurement(): String
    + setUnitOfMeasurement(unit: String): void
}

class IngredientUnitFactory {
    - {static} instance: IngredientUnitFactory
    + {static} getInstance(): IngredientUnitFactory

    - ingredientUnits: HashMap<String, IngredientUnit>
    + getIngredientUnit(pricePerUnit: double, unitOfMeasurement: String): IngredientUnit
}

IngredientUnitFactory *-- IngredientUnitFactory
IngredientUnitFactory *-- IngredientUnit

class IngredientStorageRequirement {
    - currentQuantity: double
    - maxQuantityLimit: double
    - alertLowQuantity: double
    - timesReachedLow: int

    + getCurrentQuantity(): double
    + setCurrentQuantity(quantity: double): void
    + getMaxQuantityLimit(): double
    + setMaxQuantityLimit(limit: double): void
    + getAlertLowQuantity(): double
    + setAlertLowQuantity(alert: double): void
    + getTimesReachedLow(): int
    + setTimesReachedLow(times: int): void
}

Ingredient *-- IngredientStorageRequirement
Ingredient *-- IngredientUnit

class Recipe {
    - recipeID: Long
    - recipeName: String
    - recipeComponents: List<RecipeComponent>
    - useCount: int
    - useHistory: List<RecipeUseHistory>

    + getRecipeID(): Long
    + getRecipeName(): String
    + setRecipeName(name: String): void
    + getRecipeComponents(): List<RecipeComponent>
    + setRecipeComponents(components: List<RecipeComponent>): void
    + getUseCount(): int
    + setUseCount(count: int): void
    + getUseHistory(): List<RecipeUseHistory>
    + setUseHistory(history: List<RecipeUseHistory>): void
}


class RecipeUseHistory {
    - id: Long
    - lastUsed: Date
    - recipe: Recipe

    + getRecipeUseHistoryID(): Long
    + getLastUsed(): Date
    + setLastUsed(date: Date): void
    + getRecipe(): Recipe
    + setRecipe(recipe: Recipe): void
}


class RecipeComponent {
    - id: Long
    - ingredient: Ingredient
    - quantity: int

    + getRecipeComponentID(): Long
    + getIngredient(): Ingredient
    + setIngredient(ingredient: Ingredient): void
    + getQuantity(): int
    + setQuantity(quantity: int): void
}

Recipe *-- RecipeComponent
Recipe *-- RecipeUseHistory
RecipeComponent o-- Ingredient

class Report {
    - id : Long
    - reportType : REPORT_TYPE
    - entityId : Long
    - entityName : String
    - timestamp : LocalDateTime
    - count : Integer

    + Report(reportType: REPORT_TYPE, entityId: Long, entityName: String)

    + getId() : Long
    + setId(id: Long) : void
    + getReportType() : REPORT_TYPE
    + setReportType(reportType: REPORT_TYPE) : void
    + getEntityId() : Long
    + setEntityId(entityId: Long) : void
    + getEntityName() : String
    + setEntityName(entityName: String) : void
    + getTimestamp() : LocalDateTime
    + setTimestamp(timestamp: LocalDateTime) : void
    + getCount() : Integer
    + setCount(count: Integer) : void
}

Report o-- Ingredient
Report o-- Recipe

@enduml